--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <header >
     <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm sticky-top">
       <div class="container">
-        <img src="assets/IMG/Skyspaces.png" alt="" height="80px" width="150px"href="#home" >
+        <img src="assets/img/Skyspaces.png" alt="" height="80px" width="150px"href="#home" >
         <button
           class="navbar-toggler"
           type="button"
@@ -107,7 +107,7 @@
 
     <!-- Image Slider Container -->
           <div id="slider-container" style="width:100%; overflow:hidden;">
-        <img id="slider-image" src="assets/IMG/Skyspaces.png"
+        <img id="slider-image" src="assets/img/Skyspaces.png"
              
              alt="Product Image" 
              style="width:100%; transition: opacity 0.5s;">
@@ -600,3 +600,4 @@
   <script src="assets/js/main.js"></script>
 </body>
 </html>
+
