--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               <a href="#contact" class="btn btn-primary btn-lg">
                 Request Product Catalogue
               </a>
-              <a href="#products" class="btn btn-outline-light btn-lg">
+              <a href="diversey.html" class="btn btn-outline-light btn-lg">
                 Explore Product Range
               </a>
             </div>
@@ -600,4 +600,5 @@
   <script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
