--- a/diversey.html
+++ b/diversey.html
@@ -776,10 +776,10 @@
         <!-- 1 -->
         <article class="product-card" data-name="Diversey Taski R1 Bathroom Cleaner" data-tags="bathroom cleaner r1 taski disinfectant">
           <div class="product-image-wrap">
-            <img src="assets/img/Sumarbite.png" alt="Diversey Taski R1 Bathroom Cleaner 5L" />
+            <img src="assets/img/Sumarbite.png" alt="Diversey Sumarbite Multipurpose Cleaning Concentrate Liquid" />
           </div>
           <div class="product-info">
-            <div class="product-name">Diversey Taski R1 Super Bathroom Cleaner – 5 L</div>
+            <div class="product-name">Diversey Sumarbite Multipurpose Cleaning Concentrate Liquid</div>
             <div class="product-meta">
               Heavy-duty bathroom &amp; toilet surface cleaner with fresh fragrance.
             </div>
@@ -1208,3 +1208,4 @@
 </script>
 </body>
 </html>
+
