--- a/diversey.html
+++ b/diversey.html
@@ -802,10 +802,10 @@
         <!-- 2 -->
         <article class="product-card" data-name="Diversey Taski R2 Multi-purpose Cleaner" data-tags="r2 multipurpose surface cleaner housekeeping">
           <div class="product-image-wrap">
-            <img src="assets/img/bathroom clesanser.png" alt="Diversey Taski R2 Multi-purpose Cleaner 5L" />
+            <img src="assets/img/bathroom clesanser.png" alt="Diversey Crew Bathroom Cleaner & Descaler" />
           </div>
           <div class="product-info">
-            <div class="product-name">Diversey Taski R2 Multi-Purpose Cleaner – 5 L</div>
+            <div class="product-name">Diversey Crew Bathroom Cleaner & Descaler</div>
             <div class="product-meta">
               For hard surface cleaning in hotels, offices &amp; institutions.
             </div>
@@ -828,10 +828,10 @@
         <!-- 3 -->
         <article class="product-card" data-name="Diversey Taski R3 Glass Cleaner" data-tags="glass cleaner r3 housekeeping">
           <div class="product-image-wrap">
-            <img src="assets/img/Concentrated house cleaner.png" alt="Diversey Taski R3 Glass Cleaner 5L" />
+            <img src="assets/img/Concentrated house cleaner.png" alt="Diversey Crew Concentrated Glass And House Cleaner" />
           </div>
           <div class="product-info">
-            <div class="product-name">Diversey Taski R3 Glass &amp; Surface Cleaner – 5 L</div>
+            <div class="product-name">Diversey Crew Concentrated Glass And House Cleaner</div>
             <div class="product-meta">
               Streak-free cleaning for glass, mirrors, windows &amp; shiny surfaces.
             </div>
@@ -854,10 +854,10 @@
         <!-- 4 -->
         <article class="product-card" data-name="Diversey Taski R4 Furniture Polish" data-tags="furniture polish r4 housekeeping">
           <div class="product-image-wrap">
-            <img src="assets/img/toilet bowl cleaner.png" alt="Diversey Taski R4 Furniture Polish" />
+            <img src="assets/img/toilet bowl cleaner.png" alt="Diversey Crew Toilet Bowl Cleaner" />
           </div>
           <div class="product-info">
-            <div class="product-name">Diversey Taski R4 Furniture &amp; Wood Polish – 5 L</div>
+            <div class="product-name">Diversey Crew Toilet Bowl Cleaner</div>
             <div class="product-meta">
               Ready-to-use polish for wood &amp; laminated surfaces with shine enhancement.
             </div>
@@ -880,10 +880,10 @@
         <!-- 5 -->
         <article class="product-card" data-name="Diversey Taski R5 Air Freshener" data-tags="air freshener r5 room spray fragrance">
           <div class="product-image-wrap">
-            <img src="assets/img/Disinfectant floor cleaner.png" alt="Diversey Taski R5 Air Freshener" />
+            <img src="assets/img/Disinfectant floor cleaner.png" alt="Diversey Crew Disinfectant Floor Cleaner" />
           </div>
           <div class="product-info">
-            <div class="product-name">Diversey Taski R5 Room Air Freshener – 5 L</div>
+            <div class="product-name">Diversey Crew Disinfectant Floor Cleaner</div>
             <div class="product-meta">
               Long-lasting fragrance for guest rooms, lobbies &amp; corridors.
             </div>
@@ -906,10 +906,10 @@
         <!-- 6 -->
         <article class="product-card" data-name="Diversey Taski R6 Toilet Bowl Cleaner" data-tags="toilet bowl cleaner r6 bathroom">
           <div class="product-image-wrap">
-            <img src="assets/img/furniture cleaner.png" alt="Diversey Taski R6 Toilet Bowl Cleaner" />
+            <img src="assets/img/furniture cleaner.png" alt="Diversey Crew Furniture Cleaner & Maintainer" />
           </div>
           <div class="product-info">
-            <div class="product-name">Diversey Taski R6 Toilet Bowl Cleaner – 5 L</div>
+            <div class="product-name">Diversey Crew Furniture Cleaner & Maintainer</div>
             <div class="product-meta">
               Thick gel formula to remove stains &amp; scale from toilet bowls &amp; urinals.
             </div>
@@ -932,10 +932,10 @@
         <!-- 7 -->
         <article class="product-card" data-name="Diversey Taski R7 Floor Cleaner" data-tags="floor cleaner r7 housekeeping">
           <div class="product-image-wrap">
-            <img src="assets/img/stainless steel cleaner.png" alt="Diversey Taski R7 Floor Cleaner" />
+            <img src="assets/img/stainless steel cleaner.png" alt="Diversey Crew Stainless Steel Cleaner & Polish" />
           </div>
           <div class="product-info">
-            <div class="product-name">Diversey Taski R7 Floor Cleaner Concentrate – 5 L</div>
+            <div class="product-name">Diversey Crew Stainless Steel Cleaner & Polish</div>
             <div class="product-meta">
               Concentrated neutral floor cleaner suitable for daily mopping.
             </div>
@@ -958,10 +958,10 @@
         <!-- 8 -->
         <article class="product-card" data-name="Diversey Taski R9 Bathroom Cleaner" data-tags="bathroom cleaner r9 hard water scale remover">
           <div class="product-image-wrap">
-            <img src="assets/img/room freshner.png" alt="Diversey Taski R9 Bathroom Cleaner" />
+            <img src="assets/img/room freshner.png" alt="Diversey Crew Room Freshner & Deodorizer" />
           </div>
           <div class="product-info">
-            <div class="product-name">Diversey Taski R9 Bathroom &amp; Hard Surface Cleaner – 5 L</div>
+            <div class="product-name">Diversey Crew Room Freshner & Deodorizer</div>
             <div class="product-meta">
               Removes soap scum, hard water deposits &amp; stains from bathroom surfaces.
             </div>
@@ -1208,4 +1208,5 @@
 </script>
 </body>
 </html>
+
 
