--- a/diversey.html
+++ b/diversey.html
@@ -819,7 +819,7 @@
             <div class="price">
               On Request <span>/ Can</span>
             </div>
-            <button class="btn-enquire" onclick="openEnquiry('Diversey Taski R2 Multi-Purpose Cleaner – 5 L')">
+            <button class="btn-enquire" onclick="openEnquiry('Diversey Crew Bathroom Cleaner & Descaler')">
               <span class="icon">💬</span> Enquire
             </button>
           </div>
@@ -1208,5 +1208,6 @@
 </script>
 </body>
 </html>
+
 
 
