--- a/diversey.html
+++ b/diversey.html
@@ -793,7 +793,7 @@
             <div class="price">
               On Request <span>/ Can</span>
             </div>
-            <button class="btn-enquire" onclick="openEnquiry('Diversey Taski R1 Super Bathroom Cleaner – 5 L')">
+            <button class="btn-enquire" onclick="openEnquiry('Diversey Sumarbite Multipurpose Cleaning Concentrate Liquid')">
               <span class="icon">💬</span> Enquire
             </button>
           </div>
@@ -845,7 +845,7 @@
             <div class="price">
               On Request <span>/ Can</span>
             </div>
-            <button class="btn-enquire" onclick="openEnquiry('Diversey Taski R3 Glass & Surface Cleaner – 5 L')">
+            <button class="btn-enquire" onclick="openEnquiry('Diversey Crew Concentrated Glass And House Cleaner')">
               <span class="icon">💬</span> Enquire
             </button>
           </div>
@@ -871,7 +871,7 @@
             <div class="price">
               On Request <span>/ Can</span>
             </div>
-            <button class="btn-enquire" onclick="openEnquiry('Diversey Taski R4 Furniture & Wood Polish – 5 L')">
+            <button class="btn-enquire" onclick="openEnquiry('Diversey Crew Toilet Bowl Cleaner')">
               <span class="icon">💬</span> Enquire
             </button>
           </div>
@@ -897,7 +897,7 @@
             <div class="price">
               On Request <span>/ Can</span>
             </div>
-            <button class="btn-enquire" onclick="openEnquiry('Diversey Taski R5 Room Air Freshener – 5 L')">
+            <button class="btn-enquire" onclick="openEnquiry('Diversey Crew Disinfectant Floor Cleaner')">
               <span class="icon">💬</span> Enquire
             </button>
           </div>
@@ -923,7 +923,7 @@
             <div class="price">
               On Request <span>/ Can</span>
             </div>
-            <button class="btn-enquire" onclick="openEnquiry('Diversey Taski R6 Toilet Bowl Cleaner – 5 L')">
+            <button class="btn-enquire" onclick="openEnquiry('Diversey Crew Furniture Cleaner & Maintainer')">
               <span class="icon">💬</span> Enquire
             </button>
           </div>
@@ -949,7 +949,7 @@
             <div class="price">
               On Request <span>/ Can</span>
             </div>
-            <button class="btn-enquire" onclick="openEnquiry('Diversey Taski R7 Floor Cleaner Concentrate – 5 L')">
+            <button class="btn-enquire" onclick="openEnquiry('Diversey Crew Stainless Steel Cleaner & Polish')">
               <span class="icon">💬</span> Enquire
             </button>
           </div>
@@ -975,7 +975,7 @@
             <div class="price">
               On Request <span>/ Can</span>
             </div>
-            <button class="btn-enquire" onclick="openEnquiry('Diversey Taski R9 Bathroom & Hard Surface Cleaner – 5 L')">
+            <button class="btn-enquire" onclick="openEnquiry('Diversey Crew Room Freshner & Deodorizer')">
               <span class="icon">💬</span> Enquire
             </button>
           </div>
@@ -1208,6 +1208,7 @@
 </script>
 </body>
 </html>
+
 
 
 
