--- a/diversey.html
+++ b/diversey.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Diversey Products Supplier in Bangalore | YOUR_BRAND_NAME</title>
+  <title>Diversey Products Supplier in Bangalore | Skyspaces</title>
   <meta name="description" content="Buy original Diversey & Taski cleaning chemicals in Bangalore. We supply Taski R series, Crew floor cleaners, kitchen hygiene, bathroom care & housekeeping products with fast delivery and competitive prices." />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -1208,6 +1208,7 @@
 </script>
 </body>
 </html>
+
 
 
 
