--- a/diversey.html
+++ b/diversey.html
@@ -727,7 +727,7 @@
         <div class="hero-tag">
           🧴 Diversey | Taski | Crew | Suma | Softcare
         </div>
-        <img src="assets/img/Diversey.png" alt="Diversey cleaning chemicals display" />
+        <img src="assets/img/diversey.png" alt="Diversey cleaning chemicals display" />
 
         <div class="hero-stats">
           <div class="stat-card">
@@ -1208,6 +1208,7 @@
 </script>
 </body>
 </html>
+
 
 
 
