--- a/diversey.html
+++ b/diversey.html
@@ -709,7 +709,7 @@
         </div>
 
         <div class="hero-cta">
-          <a href="https://wa.me/YOUR_WHATSAPP_NUMBER?text=I%20am%20interested%20in%20Diversey%20products" class="btn-primary">
+          <a href="https://wa.me/919611447123"  class="btn-primary">
             <span>WhatsApp Price List</span> <span>➡️</span>
           </a>
           <a href="#products" class="btn-outline">
@@ -1042,7 +1042,7 @@
         <span>•</span>
         <a href="tel:YOUR_PHONE_NUMBER">Call: 9611447123</a>
         <span>•</span>
-        <a href="https://wa.me/YOUR_WHATSAPP_NUMBER" target="_blank">WhatsApp Us</a>
+        <a href="https://wa.me/919611447123" target="_blank">WhatsApp Us</a>
       </div>
     </div>
   </footer>
@@ -1052,7 +1052,7 @@
     <button class="sticky-btn secondary" onclick="window.location.href='tel:YOUR_PHONE_NUMBER'">
       <span class="icon">📞</span> Call Now
     </button>
-    <button class="sticky-btn primary" onclick="window.location.href='https://wa.me/YOUR_WHATSAPP_NUMBER?text=I%20want%20Diversey%20product%20details'">
+    <button class="sticky-btn primary" onclick="window.location.href='https://wa.me/919611447123?text=I%20want%20Diversey%20product%20details'">
       <span class="icon">💬</span> WhatsApp Quote
     </button>
   </div>
@@ -1208,6 +1208,7 @@
 </script>
 </body>
 </html>
+
 
 
 
