--- a/diversey.html
+++ b/diversey.html
@@ -714,7 +714,7 @@
             <span>WhatsApp Price List</span> <span>➡️</span>
           </a>
           <a href="#products" class="btn-outline">
-            <span>View All 22 Products</span>
+            <span>View All Products</span>
           </a>
         </div>
 
@@ -1209,6 +1209,7 @@
 </script>
 </body>
 </html>
+
 
 
 
