--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
               <a href="#contact" class="btn btn-primary btn-lg">
                 Request Product Catalogue
               </a>
-              <a href="diversey.html" class="btn btn-outline-light btn-lg">
-                Explore Product Range
+              <a href="https://www.amazon.in/l/27943762031?me=A19PZADC631NL4&tag=ShopReferral_99fe7da3-d1ae-4fb1-8a36-55f68d851bf5&ref=sf_seller_app_share_new_ls_srb" class="btn btn-outline-light btn-lg">
+                Visit amazon store
               </a>
             </div>
             <div class="hero-badges mt-4 d-flex flex-wrap gap-3">
@@ -617,6 +617,7 @@
   <script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
