--- a/index.html
+++ b/index.html
@@ -91,20 +91,13 @@
                 Request Product Catalogue
               </a>
               <a href="https://www.amazon.in/l/27943762031?me=A19PZADC631NL4&tag=ShopReferral_99fe7da3-d1ae-4fb1-8a36-55f68d851bf5&ref=sf_seller_app_share_new_ls_srb" class="btn btn-outline-light btn-lg">
-                Visit amazon store
+                Visit our amazon store
               </a>
             </div>
             <div class="hero-badges mt-4 d-flex flex-wrap gap-3">
               <div class="hero-badge">
                
               </div>
-             <div class="btn btn-primary btn-lg btn-outline-light ">
-              <a href="https://www.amazon.in/l/27943762031?me=A19PZADC631NL4&tag=ShopReferral_99fe7da3-d1ae-4fb1-8a36-55f68d851bf5&ref=sf_seller_app_share_new_ls_srb" class="hero-badge">
-               <div class="abc">&nbsp visit our amazon store &nbsp<img src="assets/img/cart-logo.png" alt=""height="50" width="50">
-                &nbsp </div>              
-               </a>
-            </div>
-            </div>
           </div>
           <div class="col-lg-5 text-center">
 
@@ -617,6 +610,7 @@
   <script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
