--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
                
               </div>
           </div>
+          </div>
           <div class="col-lg-5 text-center">
 
     <!-- Image Slider Container -->
@@ -610,6 +611,7 @@
   <script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
