--- a/diversey.html
+++ b/diversey.html
@@ -1050,7 +1050,7 @@
 
   <!-- STICKY CONTACT BAR -->
   <div class="sticky-contact">
-    <button class="sticky-btn secondary" onclick="window.location.href='tel:YOUR_PHONE_NUMBER'">
+    <button class="sticky-btn secondary" onclick="window.location.href='tel:9611447123'">
       <span class="icon">📞</span> Call Now
     </button>
     <button class="sticky-btn primary" onclick="window.location.href='https://wa.me/919611447123?text=I%20want%20Diversey%20product%20details'">
@@ -1209,6 +1209,7 @@
 </script>
 </body>
 </html>
+
 
 
 
