--- a/taski.html
+++ b/taski.html
@@ -754,7 +754,7 @@
         <div class="hero-tag">
           🧴 Diversey | Taski | Crew | Suma | Softcare
         </div>
-        <img src="assets/img/taski.png" alt="Diversey cleaning chemicals display" />
+        <img src="assets/img/Taski.png" alt="Diversey cleaning chemicals display" />
 
         <div class="hero-stats">
           <div class="stat-card">
