--- a/kitchen-care.html
+++ b/kitchen-care.html
@@ -815,8 +815,8 @@
 
     <div class="right">
       <div class="brand-row">
-        <div class="brand1"><a href="diversey.html">diversey</a></div>
-        <div class="brand1"><a href="taski.html">Taski</a></div>
+        <div class="brand1"><a href="/diversey.html">diversey</a></div>
+        <div class="brand1"><a href="/taski.html">Taski</a></div>
         <div class="brand1">Crew</div>
         <div class="brand1">Suma</div>
         <div class="brand1">Softcare</div>
