--- a/kitchen-care.html
+++ b/kitchen-care.html
@@ -48,7 +48,7 @@
     }
 
     header {
-      background: linear-gradient(135deg, rgba(255,59,139,0.45));
+      background:linear-gradient(90deg, #f06292 0%, #9b59b6 70%, #7c3aed 100%);
       color: #fff;
       padding: 16px 20px;
       position: sticky;
@@ -668,7 +668,7 @@
     footer {
       margin-top: 10px;
       padding: 18px 16px 70px;
-      background: #9b59b6;
+      background: linear-gradient(90deg, #7c3aed 0%, #9b59b6 50%, #f06292100%);
       color: #e5e7eb;
       font-size: 12px;
     }
@@ -723,12 +723,12 @@
     }
 
     .sticky-btn.primary {
-      background: var(--accent);
+      background: linear-gradient(90deg, #f06292 0%, #9b59b6 70%, #7c3aed 100%);
       color: #fff;
     }
 
     .sticky-btn.secondary {
-      background: #0f172a;
+      background: linear-gradient(90deg,#7c3aed 0%, #9b59b6 40%, #f06292 100%)
       color: #e5e7eb;
     }
 
