--- a/kitchen-care.html
+++ b/kitchen-care.html
@@ -668,7 +668,7 @@
     footer {
       margin-top: 10px;
       padding: 18px 16px 70px;
-      background: linear-gradient(90deg, #7c3aed 0%, #9b59b6 50%, #f06292100%);
+      background: linear-gradient(90deg, #7c3aed 0%, #9b59b6 50%, #f06292 100%);
       color: #e5e7eb;
       font-size: 12px;
     }
@@ -728,7 +728,7 @@
     }
 
     .sticky-btn.secondary {
-      background: linear-gradient(90deg,#7c3aed 0%, #9b59b6 40%, #f06292 100%)
+      background: linear-gradient(90deg, #7c3aed 0%, #9b59b6 40%, #f06292 100%)
       color: #e5e7eb;
     }
 
