--- a/kitchen-care.html
+++ b/kitchen-care.html
@@ -780,7 +780,7 @@
 
   <section class="category">
     <div class="category-title">ALL PURPOSE CLEANER</div>
-    <div class="items" id="cat6"></div>
+    <div class="items lert" id="cat6"></div>
   </section>
 </div>
     
