--- a/kitchen-care.html
+++ b/kitchen-care.html
@@ -937,8 +937,8 @@
       { name: "Dispenser", img: "assets/img/dispenser.png", link: "dispenser.html" }
     ],
     cat5: [
-      { name: "Suma Extra", img: "assets/img/suma-extra.png", link: "suma-extra.html" },
-      { name: "Suma Multi", img: "assets/img/suma-multi.png", link: "suma-multi.html" }
+      { name: "Suma Det", img: "assets/img/suma det.png", link: "suma-extra.html" },
+      { name: "Suma Star", img: "assets/img/suma star.png", link: "suma-multi.html" }
     ],
     cat6: [
       { name: "Suma Extra", img: "assets/img/suma-extra.png", link: "suma-extra.html" },
