--- a/kitchen-care.html
+++ b/kitchen-care.html
@@ -926,9 +926,9 @@
       { name: "Suma Surface", img: "assets/img/suma-surface.png", link: "suma-surface.html" }
     ],
     cat3: [
-      { name: "Suma Bac", img: "assets/img/suma-bac.png", link: "suma-bac.html" },
-      { name: "Suma Sol", img: "assets/img/suma-sol.png", link: "suma-sol.html" },
-      { name: "Suma Tab", img: "assets/img/suma-tab.png", link: "suma-tab.html" }
+      { name: "Suma Bac", img: "assets/img/suma bac.png", link: "suma-bac.html" },
+      { name: "Suma Sol", img: "assets/img/suma sol.png", link: "suma-sol.html" },
+      { name: "Suma Tab", img: "assets/img/suma tab.png", link: "suma-tab.html" }
     ],
     cat4: [
       { name: "Suma Multi Conc", img: "assets/img/suma-multi-conc.png", link: "suma-multi-conc.html" },
@@ -941,8 +941,8 @@
       { name: "Suma Star", img: "assets/img/suma star.png", link: "suma-multi.html" }
     ],
     cat6: [
-      { name: "Suma Extra", img: "assets/img/suma-extra.png", link: "suma-extra.html" },
-      { name: "Suma Multi", img: "assets/img/suma-multi.png", link: "suma-multi.html" }
+      { name: "Suma Extra", img: "assets/img/suma extra.png", link: "suma-extra.html" },
+      { name: "Suma Multi", img: "assets/img/suma multi.png", link: "suma-multi.html" }
     ]
   };
 
