--- a/kitchen-care.html
+++ b/kitchen-care.html
@@ -928,7 +928,7 @@
     cat3: [
       { name: "Suma Bac", img: "assets/img/suma bac.png", link: "suma-bac.html" },
       { name: "Suma Sol", img: "assets/img/suma sol.png", link: "suma-sol.html" },
-      { name: "Suma Tab", img: "assets/img/suma tab.png", link: "suma-tab.html" }
+      { name: "Suma Tab", img: "assets/img/Suma tab.png", link: "suma-tab.html" }
     ],
     cat4: [
       { name: "Suma Multi Conc", img: "assets/img/suma-multi-conc.png", link: "suma-multi-conc.html" },
