--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <header >
     <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm sticky-top">
       <div class="container">
-        <img src="assets/img/Skyspaces.png" alt="" height="80px" width="150px"href="#home" >
+        <img src="assets/img/skyspace.png" alt="" height="80px" width="150px"href="#home" >
         <button
           class="navbar-toggler"
           type="button"
@@ -611,6 +611,7 @@
   <script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
