--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm sticky-top">
       <div class="container">
         <img src="assets/img/skyspace.png" alt="" height="80px" width="150px"href="#home" >
+        <h2>SKYSPACES</h2>
         <button
           class="navbar-toggler"
           type="button"
@@ -611,6 +612,7 @@
   <script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
