--- a/taski.html
+++ b/taski.html
@@ -81,7 +81,7 @@
       width: 80px;
       height: 80px;
       border-radius: 12px;
-      background: #fff;
+      background: linear-gradient(135deg, #2B2F36, #3A3F46);
       display: flex;
       align-items: center;
       justify-content: center;
