--- a/kitchen-care.html
+++ b/kitchen-care.html
@@ -931,7 +931,7 @@
     ],
     cat4: [
       { name: "Suma Multi Conc", img: "assets/img/suma-multi-conc.png", link: "suma-multi-conc.html" },
-      { name: "Suma San", img: "assets/img/suma-san.png", link: "suma-san.html" },
+      { name: "suma san", img: "assets/img/suma-san.png", link: "suma-san.html" },
       { name: "Suma Star Plus", img: "assets/img/suma-star-plus.png", link: "suma-star-plus.html" },
       { name: "Dispenser", img: "assets/img/dispenser.png", link: "dispenser.html" }
     ],
